# pipe-perplexity

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml
inbox/: 2026-05-04-compound-engineering-current-state.md  2026-05-04-devon-additive-layer.md  2026-05-04-devon-org-review.md  2026-05-04-documentation-and-breakthrough-patterns.md  2026-05-04-flat-agent-orgs-and-llm-roster.md  2026-05-04-github-mastery-research.md  2026-05-04-institutional-psychology-and-flow-state.md  2026-05-04-maestro-and-agent-harnesses.md  2026-05-04-openclaw-hermes-kenhuang-verification.md  2026-05-04-single-operator-ai-businesses.md  2026-05-04-sycophancy-mitigation-patterns.md  2026-05-04-token-optimisation-2026.md  2026-05-05-antigravity-agent-profile.md  2026-05-05-antigravity-holistic-verdict.md  2026-05-05-antigravity-master-synthesis.md  2026-05-05-antigravity-perplex-opinion.md  2026-05-05-cassian-finalised-plan.md  2026-05-05-cassian-self-assessment-v2-reframed.md  2026-05-05-cassian-self-assessment.md  2026-05-05-devon-complete-plan.md  2026-05-05-devon-execution-log.md  (+11 more)
tools/pplx-exporter/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
tools/pplx-exporter/pplx_exporter/: __init__.py  audit.py  auth.py  checkpoint.py  config.py  discovery.py  fetch.py  http.py  main.py  manifest.py  render.py  types.py
tools/pplx-exporter/src/: audit.ts  auth.ts  checkpoint.ts  config.ts  discovery.ts  fetch-thread.ts  index.ts  manifest.ts  render.ts  types.ts
(+9 files in other folders)
