[project]
name = "pplx-exporter"
version = "0.1.0"
description = "Authenticated web conversation exporter — exports threads to Markdown + JSON with full metadata"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Amplified Partners" }]
dependencies = [
    "curl_cffi>=0.7.0",
    "playwright>=1.44.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pplx-export = "pplx_exporter.main:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
